2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve interval / bit synchronization in generalized constant propagation analysis.

2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  support/valdiag/tests/bug-3603.c:
	  Fix bug #3603.
	* src/SDCCmain.c,
	  src/pdk/main.c,
	  src/z80/main.c:
	  Improve error message on invalid -mmarch option, part of RFE #881.

2023-06-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCopt.c,
	  src/hc08/main.c,
	  src/*/ralloc2.cc:
	  Fixes for generalized constant propagation and support functions for _BitInt.

2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propagation analysis and optimization.

2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCBBlock.c,
	  src/SDCCgenconstprop.cc,
	  src/SDCCopt.c,
	  src/SDCCopt.h:
	  Replace a multiplication narrowing optimization by a more generic one based on generalized constant propagation.

2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propgation analysis and optimization.
	* src/hc08/gen.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  src/mos6502/ralloc2.cc:
	  Further use of information from generalized constant propagation analysis in code generation.

2023-06-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/hc08/gen.h,
	  src/hc08/main.c,
	  src/hc08/ralloc.c,
	  src/hc08/ralloc2.cc:
	  Use information from generalized constant propagation analysis in hc08 code generation, remove support for old register allocator.

2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/pdk/gen.c:
	  Improve generalized constant propagation analysis and optimization.

2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
